# agentic-eng-design

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  app.py  bootstrap_env.py  config.py  data_models.py  display_metrics.py  environment.yml  eval_all.py  eval_saved.py  evaluation.py  experiment_config.py  graph_utils.py  llm_models.py  prompts.py  pyproject.toml  requirements.txt  run_pipeline.py  tools.py  utils.py  validation.py  visualize_best_dsg.py  workflow.py
agents/: coder.py  evolution.py  generation.py  generation_pair.py  graph_designer.py  human.py  meta_review.py  orchestrator.py  planner.py  ranking.py  reflection.py  reflection_pair.py  requirements.py  router.py  supervisor.py  synthesizer.py  worker.py
experiment_logs/: experiment_log_20250610_085732.jsonl  experiment_log_20250610_090212.jsonl  experiment_log_20250610_091355.jsonl  experiment_log_20250610_091557.jsonl  experiment_log_20250610_092407.jsonl  experiment_log_20250610_095139.jsonl  experiment_log_20250610_095212.jsonl  experiment_log_20250610_095532.jsonl  experiment_log_20250612_165935.jsonl  experiment_log_20250612_170510.jsonl  experiment_log_20250612_171751.jsonl  experiment_log_20250612_175809.jsonl  experiment_log_20250612_180931.jsonl  experiment_log_20250612_181419.jsonl  experiment_log_20250612_190003.jsonl  experiment_log_20250612_190646.jsonl  experiment_log_20250612_191339.jsonl  experiment_log_20250612_194312.jsonl  experiment_log_20250612_203933.jsonl  experiment_log_20250613_083615.jsonl  experiment_log_20250615_163347.jsonl  experiment_log_20250615_163603.jsonl  experiment_log_20250615_163803.jsonl  experiment_log_20250615_164006.jsonl  experiment_log_20250615_172249.jsonl  experiment_log_20250615_174440_IDETC2025.jsonl  experiment_log_20250615_185047.jsonl  experiment_log_20250615_200900_IDETC2025.jsonl  experiment_log_20250616_084202.jsonl  experiment_log_20250616_084216.jsonl  experiment_log_20250616_123520_IDETC2025.jsonl  experiment_log_20250616_125436_IDETC2025.jsonl  experiment_log_20250616_155616.jsonl  experiment_log_20250617_082728_IDETC2025.jsonl  experiment_log_20250617_102628.jsonl  experiment_log_20250617_130432.jsonl  experiment_log_20250617_151218.jsonl  experiment_log_20250618_080625.jsonl  experiment_log_20250819_093441.jsonl  experiment_log_20250819_100957.jsonl  (+4 more)
experiment_logs/archive/: experiment_log_20250610_080536.jsonl  experiment_log_20250610_080808.jsonl  experiment_log_20250610_081512.jsonl  experiment_log_20250610_081935.jsonl  experiment_log_20250610_082451.jsonl  experiment_log_20250610_082858.jsonl  experiment_log_20250610_083530.jsonl  experiment_log_20250610_085503.jsonl  experiment_log_20250610_090812.jsonl  experiment_log_20250610_093932.jsonl  experiment_log_20250610_094445.jsonl  experiment_log_20250610_094920.jsonl  experiment_log_20250610_095221.jsonl  experiment_log_20250610_095650.jsonl  experiment_log_20250612_165401.jsonl  experiment_log_20250612_170739.jsonl  experiment_log_20250612_171305.jsonl  experiment_log_20250612_172353.jsonl  experiment_log_20250612_175622.jsonl  experiment_log_20250612_175929.jsonl  experiment_log_20250612_183535.jsonl  experiment_log_20250612_184351.jsonl  experiment_log_20250612_185912.jsonl  experiment_log_20250612_190020.jsonl  experiment_log_20250612_190034.jsonl  experiment_log_20250612_190122.jsonl  experiment_log_20250612_190134.jsonl  experiment_log_20250612_190222.jsonl  experiment_log_20250612_190256.jsonl  experiment_log_20250612_190320.jsonl  experiment_log_20250612_194727.jsonl  experiment_log_20250612_200308.jsonl  experiment_log_20250612_200535.jsonl  experiment_log_20250612_200735.jsonl  experiment_log_20250612_200854.jsonl  experiment_log_20250612_201010.jsonl  experiment_log_20250612_203913.jsonl  experiment_log_20250615_163246.jsonl  experiment_log_20250615_163421.jsonl  experiment_log_20250615_163438.jsonl  (+5 more)
experiment_results/: aggregate_metrics_20250617_151218.csv  aggregate_metrics_ALL.csv  experiment_stats_20250617_151218.tex  experiment_stats_ALL.tex
langsmith_traces/: IDETC-25-Extended_full_traces_2025-07-04.json  export_IDETC25_extended_full_traces_20250704.py  export_IDETC25_full_traces_and_summary_20250704.py
outputs/: pump_model_log.txt
runs/2025-05-31T16-26-59Z_73bf11c0-8156-4bcb-ac6a-d0ecc3c3f754/: DSG_1.json  DSG_2.json
runs/20250612_190646/: manifest.json
tests/: pump_model_250603.py  test_extract_scripts.py  test_requirement_parsing.py
visualization/: visualize_best_dsg.py  visualize_third_best_dsg.py  visualize_uam_dsg.py
workflows/: mas_workflow.py  pair_workflow.py
(+329 files in other folders)
